--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>hello, world</h1>
 		<p>"Call Me Ishmael."</p>
+		<img src ="images/breaching_whale.jpg" alt="This is a whale">
 	</body>
 </html>
