--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<h1>hello, world</h1>
 		<a href="about.html">About this project</a>
 		<p>"Call Me Ishmael."</p>
-		<img src ="images/breaching_whale.jpg" alt="This is a whale">
+		<a href="https://www.flickr.com/photos/28883788@N04/10097824543">
+			<img src ="images/breaching_whale.jpg" alt="This is a whale">
+		</a>
 	</body>
 </html>
