--- a/about.html
+++ b/about.html
@@ -12,5 +12,7 @@
 		<a href="https://www.flickr.com/photos/puliarfanita/22959238329">
 			<img src="images/polar_bear.jpg" alt="Polar bear">
 		</a>
+		<p>
+			Return to <a href="index.html">Home Page</a>
 	</body>
 </html>
