Personalize index page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>A whale of a greeting</title>
+		<title>My First Programmed Website</title>
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<h1>hello, world</h1>
-		<a href="about.html">About this project</a>
-		<p>"Call Me Ishmael."</p>
-		<a href="https://www.flickr.com/photos/28883788@N04/10097824543">
-			<img src ="images/breaching_whale.jpg" alt="Breaching whale">
+		<h1>I Made This!</h1>
+		<a href="about.html">About this Project</a>
+		<p>I actually built this whole thing from scratch from the things I've learned in the <em>Learn Enough to be Dangerous</e> tutorials.</p>
+		<a href="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwi4yOSWu4fVAhWGoD4KHQsdDxkQjRwIBw&url=http%3A%2F%2Fwww.imgflash.org%2Ftom-haverford-excited-face.html&psig=AFQjCNFgd3n6J-5V6fVQXE4LYf-aQYB75w&ust=1500076658617760">
+			<img src ="tom_haverford.jpg" alt="Tom Haverford">
 		</a>
 	</body>
 </html>
