Update photo on index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>I Made This!</h1>
 		<a href="about.html">About this Project</a>
 		<p>I actually built this whole thing from scratch from the things I've learned in the <em>Learn Enough to be Dangerous</e> tutorials.</p>
-		<a href="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwi4yOSWu4fVAhWGoD4KHQsdDxkQjRwIBw&url=http%3A%2F%2Fwww.imgflash.org%2Ftom-haverford-excited-face.html&psig=AFQjCNFgd3n6J-5V6fVQXE4LYf-aQYB75w&ust=1500076658617760">
+		<a href="http://www.johnvhansen.com/jvh/blog/images//tom.jpg">
 			<img src ="tom_haverford.jpg" alt="Tom Haverford">
 		</a>
 	</body>
