--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<a href="about.html">About this Project</a>
 		<p>I actually built this whole thing from scratch from the things I've learned in the <em>Learn Enough to be Dangerous</e> tutorials.</p>
 		<a href="http://www.johnvhansen.com/jvh/blog/images//tom.jpg">
-			<img src ="tom_haverford.jpg" alt="Tom Haverford">
+			<img src ="tom_haverford" alt="Tom Haverford">
 		</a>
 	</body>
 </html>
