--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<body>
 		<h1>I Made This!</h1>
 		<a href="about.html">About this Project</a>
-		<p>I actually built this whole thing from scratch from the things I've learned in the <em>Learn Enough to be Dangerous</e> tutorials.</p>
+		<p>I actually built this whole thing from scratch from the things I've learned in the <em>Learn Enough to be Dangerous</e> tutorials.
+		</p>
 		<a href="http://www.johnvhansen.com/jvh/blog/images//tom.jpg">
 			<img src ="http://www.johnvhansen.com/jvh/blog/images//tom.jpg" alt="Tom Haverford">
 		</a>
